--- a/permutabr/package.json
+++ b/permutabr/package.json
@@ -6,12 +6,15 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
+        "dev:server": "node server.dev.js",
+        "dev:watch": "nodemon server.dev.js",
         "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.13.2",
         "bcrypt": "^5.1.1",
         "celebrate": "^15.0.3",
         "cors": "^2.8.5",
@@ -27,7 +30,10 @@
         "passport-google-oauth": "^2.0.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-oauth2": "^1.8.0",
-        "pm2": "^6.0.13"
+        "pm2": "^6.0.13",
+        "socket.io": "^4.7.2",
+        "multer": "^1.4.5-lts.1",
+        "sharp": "^0.33.0"
     },
     "devDependencies": {
         "jest": "^29.7.0",
